Added image. Edited lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,10 @@
 
     <body>
         <h1>Lasagna</h1>
+
+        <img src="../img/image.jpeg" alt="A delicious-looking lasagna">
+
+        <h2>Description</h2>
+        <p>World's best lasagna. It takes a little work, but it's worth it.</p>
     </body>
 </html>
