--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="./recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/christmas-cookie.html">Soft Christmas Cookies</a></li>
+        </ul>
     </body>
 </html>
