--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/christmas-cookie.html">Soft Christmas Cookies</a></li>
+            <li><a href="./recpies/pumpkin-pie.html">Perfect Pumpkin Pie</a></li>
         </ul>
     </body>
 </html>
