--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Easy Recipes</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Easy Recipes</h1>
 
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
